<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_name">Zadajte meno</string>
    <string name="insert_bar_name">Zadajte názov podniku</string>
    <string name="insert_latitude">Zadajte zem. šírku podniku</string>
    <string name="insert_longitude">Zadajte zem. dĺžku podniku</string>
    <string name="confirm">Potvrdiť</string>
    <string name="show_on_map">Ukáž na mape</string>
    <string name="bars">Podniky</string>
    <string name="password">Heslo</string>
    <string name="user_name">Používateľské meno</string>
    <string name="register">Registruj</string>
    <string name="login">Prihlásiť</string>
    <string name="user_name_or_password_empty">Používateľské meno alebo heslo sú prázdne</string>
    <string name="firend_name">Meno kamaráta</string>
    <string name="add_friend">Pridať kamaráta</string>
    <string name="people_count">Počet ľudí</string>
    <string name="friends_list">Zoznam kamarátov</string>
    <string name="pubs_around">Podniky naokolo</string>
    <string name="join_pub">Pridať sa do podniku</string>
    <string name="open_registration">Otvor registráciu</string>
    <string name="passwords_do_not_match">Heslá sa nezhodujú alebo sú prázdne</string>
    <string name="pubs_fragment_title">Podniky</string>
    <string name="pub_detail_fragment_title">Detail podniku</string>
    <string name="login_fragment_title">Prihlásenie</string>
    <string name="registration_fragment_title">Registrácia</string>
    <string name="add_friend_fragment_title">Pridať kamaráta</string>
    <string name="friends_list_fragment_title">Zoznam kamarátov</string>
    <string name="pubs_around_fragment_title">Podniky v okolí</string>
    <string name="sign_out">Odhlásiť</string>
    <string name="no_pub_selected">Nemáte zvolený žiadny podnik</string>
    <string name="empty_name">Meno je prázdne</string>
    <string name="no_friends_found">Neboli nájdení žiadni kamaráti</string>
</resources>