<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:id="@+id/nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/barsListFragment"
        android:name="com.example.assignment.ui.fragments.BarsListFragment"
        android:label="@string/pubs_fragment_title"
        tools:layout="@layout/fragment_bars_list" >
        <action
            android:id="@+id/action_barsListFragment_to_barDetailFragment"
            app:destination="@id/barDetailFragment" />
        <action
            android:id="@+id/action_barsListFragment_to_addFriendFragment"
            app:destination="@id/addFriendFragment" />
        <action
            android:id="@+id/action_barsListFragment_to_friendsListFragment"
            app:destination="@id/friendsListFragment" />
        <action
            android:id="@+id/action_barsListFragment_to_pubsAroundFragment"
            app:destination="@id/pubsAroundFragment" />
        <action
            android:id="@+id/action_barsListFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/barDetailFragment"
        android:name="com.example.assignment.ui.fragments.BarDetailFragment"
        android:label="@string/pub_detail_fragment_title"
        tools:layout="@layout/fragment_bar_detail" >
        <action
            android:id="@+id/action_barDetailFragment_to_barsListFragment"
            app:destination="@id/barsListFragment" />
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_barDetailFragment_to_friendsListFragment"
            app:destination="@id/friendsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.assignment.ui.fragments.LoginFragment"
        android:label="@string/login_fragment_title"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_loginFragment_to_barsListFragment"
            app:destination="@id/barsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.example.assignment.ui.fragments.RegistrationFragment"
        android:label="@string/registration_fragment_title"
        tools:layout="@layout/fragment_registration" >
        <action
            android:id="@+id/action_registrationFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_registrationFragment_to_barsListFragment"
            app:destination="@id/barsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFriendFragment"
        android:name="com.example.assignment.ui.fragments.AddFriendFragment"
        android:label="@string/add_friend_fragment_title"
        tools:layout="@layout/fragment_add_friend" >
        <action
            android:id="@+id/action_addFriendFragment_to_barsListFragment"
            app:destination="@id/barsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/friendsListFragment"
        android:name="com.example.assignment.ui.fragments.FriendsListFragment"
        android:label="@string/friends_list_fragment_title"
        tools:layout="@layout/fragment_friends_list" >
        <action
            android:id="@+id/action_friendsListFragment_to_barsListFragment"
            app:destination="@id/barsListFragment" />
        <action
            android:id="@+id/action_friendsListFragment_to_barDetailFragment"
            app:destination="@id/barDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/pubsAroundFragment"
        android:name="com.example.assignment.ui.fragments.PubsAroundFragment"
        android:label="@string/pubs_around_fragment_title"
        tools:layout="@layout/fragment_pubs_around" />
</navigation>